--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="stars"></div>
 
     <!-- Section de connexion -->
-    <div class="content" id="connexion">
+    <div class="intro" id="connexion">
         <h1>Bienvenue</h1>
         <p>Avant de commencer ton aventure avec nous, crée un compte !</p>
 
@@ -47,12 +47,23 @@
     </div>
 
     <!-- Section de Jeu -->
-     <div class="content" id="choix-jeu">
-        <button onclick="showSection('choix')" id="button-retour">Retour</button>
+    <div class="content" id="choix-jeu">
+       <button onclick="showSection('choix')" id="button-retour">Retour</button>
+       <h1>Jouer</h1>
+       <p>Choisis ton mode de jeu :</p>
+       <button onclick="showSection('choix-player')" id="button-player">PLAYER vs PLAYER</button>
+       <button onclick="showSection('choix-jeu')" id="button-ia">PLAYER vs IA</button>
+       <button onclick="showSection('choix-jeu')" id="button-tournois">TOURNOIS</button>
+    </div>
+
+    <!-- Section de Player-Player -->
+     <div class="content" id="choix-player">
+        <button onclick="showSection('choix-jeu')" id="button-retour">Retour</button>
         <h1>Jouer</h1>
         <p>ARGHHHHHHHHHH!!!!!!!</p>
         <button onclick="showSection('choix-PONG')" id="button-commencer">Commencer</button>
      </div>
+
 
      <!-- Section de Compte -->
      <div class="content" id="choix-compte">
